--- a/index.html
+++ b/index.html
@@ -7,41 +7,43 @@
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/util.css">
+  <link rel="stylesheet" href="css/image.css">
+  <link rel="stylesheet" href="css/text.css">
 </head>
 <body>
 <div class="container">
   <div class="row">
     <div class="six columns">
-      <img src="images/pfp.png" alt="Фотография Андрея Кондратьева">
+      <img class="pfp" src="images/pfp.png" alt="Фотография Андрея Кондратьева">
     </div>
     <div class="six columns">
-      <h1>Кондратьев Андрей</h1>
-      <p>Должность: Разработчик Ruby</p>
-<!--      <p>Желаемая зарплата: 40 000 рублей</p>-->
-      <p>Электронная почта: <a href="mailto:dpkad.main@gmail.com">dpkad.main@gmail.com</a></p>
-      <p>Телефон: <a href="https://t.me/+79509955255">+7(950)995-52-55</a></p>
+      <h1 class="main-title">Кондратьев Андрей</h1>
+      <p class="plain">Должность: Разработчик Ruby</p>
+      <p class="plain">Электронная почта:&nbsp<a href="mailto:dpkad.main@gmail.com">dpkad.main@gmail.com</a></p>
+      <p class="plain">Телеграмм:&nbsp<a href="https://t.me/eternaltender">@eternaltender</a></p>
+      <p class="plain">Телефон:&nbsp<a href="tel:89509955255">+7(950)995-52-55</a></p>
     </div>
   </div>
   <div class="line">
-    <h2>Личная информация</h2>
-    <p>Гражданство: <span>Российская федерация</span></p>
-    <p>Место проживания: <span>Г. Красноярск</span></p>
-    <p>Дата рождения: <span>14.12.2003</span></p>
+    <h2 class="title">Личная информация</h2>
+    <p class="plain">Гражданство: <span>Российская федерация</span></p>
+    <p class="plain">Место проживания: <span>Г. Красноярск</span></p>
+    <p class="plain">Дата рождения: <span>14.12.2003</span></p>
   </div>
   <div class="line">
-    <h2>Образование</h2>
-    <p><span>2023:</span> Аэрокосмический колледж СибГУ им. М.Ф. Решетнева</p>
-    <p><span>2023:</span> Онлайн-курс программирования Ruby «Хороший программист»</p>
+    <h2 class="title">Образование</h2>
+    <p class="plain"><span>2023:</span> Аэрокосмический колледж СибГУ им. М.Ф. Решетнева</p>
+    <p class="plain"><span>2023:</span> Онлайн-курс программирования Ruby «Хороший программист»</p>
   </div>
   <div class="line bottom-space">
     <h2>Знания и навыки</h2>
-    <p>Владение основами <span>Ruby</span></p>
-    <p>Владение основами <span>С#</span></p>
-    <p>Базовые знания <span>C++</span></p>
-    <p>Базовые знания <span>HTML и CSS</span></p>
-    <p>Базовые знания <span>1C</span></p>
-    <p>Отлично владею инструментарием <span>Microsoft office</span></p>
+    <p class="plain">Владение основами <span>Ruby</span></p>
+    <p class="plain">Владение основами <span>С#</span></p>
+    <p class="plain">Базовые знания <span>C++</span></p>
+    <p class="plain">Базовые знания <span>HTML и CSS</span></p>
+    <p class="plain">Базовые знания <span>1C</span></p>
+    <p class="plain">Отлично владею инструментарием <span>Microsoft office</span></p>
   </div>
 </div>
 </body>
