--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
   </div>
   <div class="line">
     <h2 class="title">Личная информация</h2>
-    <p class="plain">Гражданство: <span>Российская федерация</span></p>
-    <p class="plain">Место проживания: <span>Г. Красноярск</span></p>
-    <p class="plain">Дата рождения: <span>14.12.2003</span></p>
+    <p class="plain">Гражданство: <span class="bold">Российская федерация</span></p>
+    <p class="plain">Место проживания: <span class="bold">Г. Красноярск</span></p>
+    <p class="plain">Дата рождения: <span class="bold">14.12.2003</span></p>
   </div>
   <div class="line">
     <h2 class="title">Образование</h2>
-    <p class="plain"><span>2023:</span> Аэрокосмический колледж СибГУ им. М.Ф. Решетнева</p>
-    <p class="plain"><span>2023:</span> Онлайн-курс программирования Ruby «Хороший программист»</p>
+    <p class="plain"><span class="bold">2023:</span> Аэрокосмический колледж СибГУ им. М.Ф. Решетнева</p>
+    <p class="plain"><span class="bold">2023:</span> Онлайн-курс программирования Ruby «Хороший программист»</p>
   </div>
   <div class="line bottom-space">
     <h2>Знания и навыки</h2>
-    <p class="plain">Владение основами <span>Ruby</span></p>
-    <p class="plain">Владение основами <span>С#</span></p>
-    <p class="plain">Базовые знания <span>C++</span></p>
-    <p class="plain">Базовые знания <span>HTML и CSS</span></p>
-    <p class="plain">Базовые знания <span>1C</span></p>
-    <p class="plain">Отлично владею инструментарием <span>Microsoft office</span></p>
+    <p class="plain">Владение основами <span class="bold">Ruby</span></p>
+    <p class="plain">Владение основами <span class="bold">С#</span></p>
+    <p class="plain">Базовые знания <span class="bold">C++</span></p>
+    <p class="plain">Базовые знания <span class="bold">HTML и CSS</span></p>
+    <p class="plain">Базовые знания <span class="bold">1C</span></p>
+    <p class="plain">Отлично владею инструментарием <span class="bold">Microsoft office</span></p>
   </div>
 </div>
 </body>
